--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <title>Sign Up - Societal Ventures</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -15,17 +16,17 @@
         </div>
         <div type="Email">
             Email
-            <br>
+            <br />
             <input class="inputs">
         </div>
         <div>
             Password
-            <br>
+            <br />
         <input type="password">
         </div>
         <div>
             Confirm Password
-            <br>
+            <br />
         <input type="password">
 
         <button class="btn btn-dark">Sign Up</button>
